--- a/frontend/viewer/style.scss
+++ b/frontend/viewer/style.scss
@@ -89,24 +89,38 @@ body {
     font-size: 16px
   }
 
+  @keyframes loading-blink {
+    0% {
+      border-color: var(--color-gray);
+      color: var(--color-gray);
+    }
+    100% {
+      border-color: var(--color-green);
+      color: var(--color-green);
+    }
+  }
   .channels {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: -4px;
     .channel {
-      border: 8px solid var(--color-gray);
+      border: 4px solid var(--color-gray);
       color: var(--color-gray);
       margin: 4px;
       padding: 0 8px;
       cursor: pointer;
+      transition: color .2s ease, background-color .1s ease;
       &:hover {
-        border-color: var(--color-red);
-        color: var(--color-red);
+        border-color: var(--color-yellow);
+        color: var(--color-yellow);
       }
       &.selected {
         border-color: var(--color-white);
         color: var(--color-white);
+      }
+      &.loading {
+        animation: .5s infinite alternate loading-blink;
       }
     }
   }
@@ -124,7 +138,15 @@ body {
         color: var(--color-gray);
       }
     }
+    .dropdown-box-background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
     .dropdown-box {
+      z-index: 101;
       background: var(--color-back);
       position: fixed;
       max-height: 10rem;
@@ -137,6 +159,7 @@ body {
 
   .controls {
     font-size: 24px;
+    padding: 8px 0;
   }
 
   .teletext-page-wrapper {
