page and time control via keyboard input + correct url-hash back&forth

--- a/frontend/viewer/style.scss
+++ b/frontend/viewer/style.scss
@@ -129,6 +129,13 @@ body {
     input { width: 4rem; }
   }
 
+  .edited {
+    color: var(--color-green);
+    .value {
+      color: var(--color-green);
+    }
+  }
+
   .dropdown {
     display: inline-block;
     background: var(--color-back);
@@ -160,6 +167,8 @@ body {
   .controls {
     font-size: 24px;
     padding: 8px 0;
+    display: flex;
+    justify-content: space-between;
   }
 
   .teletext-page-wrapper {
